<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
<ImageView 
    android:id="@id/imv_camera_picter_id"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:layout_above="@id/rl_camera_buttom_id"
    android:src="@drawable/camera_bg"
    android:scaleType="fitXY"
    />
  <FrameLayout
    android:layout_height="55dp"
    android:layout_width="fill_parent"
    android:id="@id/rl_camera_buttom_id"
    android:layout_alignParentBottom="true"
    android:background="@color/camera__button_bg"
    android:orientation="horizontal"
  >
  <Button 
      android:id="@id/rephotograph_id"
      android:layout_height="45dp"
      android:layout_width="100dp"
      android:text="@string/rephotograph"
      android:layout_gravity="center_vertical"
      android:layout_margin="5dp"
       android:background="@drawable/camera_resetbutton_selector"
      />  
    <TextView 
        android:id="@id/preview_picter_id"
        android:layout_height="wrap_content"
      android:layout_width="wrap_content"
      android:text="@string/preview" 
      android:gravity="center"
      android:layout_gravity="center"
      android:textSize="16dp"
      android:textColor="#000000"
        />
 <Button 
      android:id="@id/use_picter_id"
      android:layout_height="45dp"
      android:layout_width="100dp"
      android:text="@string/user_picter"
      android:layout_margin="5dp"
     android:layout_gravity="right"
     android:textColor="@color/whilt"
     android:background="@drawable/camera_usebutton_selector"
      />  
</FrameLayout>
</RelativeLayout>