<?xml version="1.0" encoding="utf-8"?>
<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" 
     android:background="@color/whilt"
      android:configChanges="orientation|keyboardHidden"
    >
     <LinearLayout 
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:background="@color/black"
        >
     <FrameLayout 
        android:layout_width="fill_parent"
        android:layout_height="45dp"
         android:background="@drawable/title_shap"
        >
         <Button 
           android:id="@id/back"
         android:layout_height="30dp"
           android:layout_width="48dp" 
          android:layout_marginLeft="7.5dp"
          android:textSize="12sp"
           android:background="@drawable/tabbar_icon_0"
          android:textColor="@color/whilt"
          android:layout_gravity="center_vertical"
          android:text="@string/back"
           />
       <TextView 
          android:id="@id/more_name_id"
           android:layout_height="wrap_content"
           android:layout_width="wrap_content"
           style="@style/title_bar"
           android:layout_gravity="center"
           android:text="@string/share"
           /> 
           <Button 
               android:layout_height="30dp"
                android:layout_width="45dp"
                android:id="@+id/share_bt"
                android:background="@drawable/tabbar_icon_0"
                android:layout_gravity="right|center_vertical"
                android:layout_marginRight="7.5dp"
                android:text="@string/send"
                android:textColor="@color/whilt"
                android:textSize="12sp"
               />
    </FrameLayout>
        </LinearLayout>
    <LinearLayout 
        android:layout_height="fill_parent"
        android:layout_width="fill_parent"
        android:orientation="horizontal"
        >
         <LinearLayout 
          android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:orientation="vertical"
        >
        <ImageView 
            android:id="@+id/photo"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:layout_margin="10dp"
            android:scaleType="fitXY"
            android:background="@drawable/image_shape"
            android:padding="5dp"
            />
        <Button 
            android:layout_width="110dp"
            android:layout_height="40dp"
            android:text="@string/rephotograph"
             android:background="@drawable/tabbar_icon_0"
          android:textColor="@color/whilt"
          android:layout_marginLeft="10dp"
          android:id="@+id/reset_bt2"
            />
    </LinearLayout>
     
    <EditText 
        android:id="@+id/share_text"
        android:layout_width="fill_parent"
        android:layout_height="163dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:hint="输入你想说的话"
        android:gravity="top"
        />
    </LinearLayout>

   
</LinearLayout>